--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,24 +25,24 @@ FetchContent_MakeAvailable(callbackmanager)
 
 enable_testing()
 
-add_executable(${CMAKE_PROJECT_NAME}_test)
-target_sources(${CMAKE_PROJECT_NAME}_test
+add_executable(${CMAKE_PROJECT_NAME}_teseo)
+target_sources(${CMAKE_PROJECT_NAME}_teseo
         PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/teseo/teseo.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/test/test_gps_teseo_lib.cpp
         ${callbackmanager_SOURCE_DIR}/test/callbackmanager_test.cpp
 )
-target_sources(${CMAKE_PROJECT_NAME}_test
+target_sources(${CMAKE_PROJECT_NAME}_teseo
         PUBLIC
         FILE_SET cxx_modules TYPE CXX_MODULES FILES
         ${CMAKE_CURRENT_SOURCE_DIR}/teseo/teseo_iface.cpp
         ${callbackmanager_SOURCE_DIR}/callbackmanager.cpp
 )
 
-target_link_libraries( ${CMAKE_PROJECT_NAME}_test
+target_link_libraries( ${CMAKE_PROJECT_NAME}_teseo
         GTest::gtest_main
         GTest::gmock_main
 )
 
 include(GoogleTest)
-gtest_discover_tests(${CMAKE_PROJECT_NAME}_test)
+gtest_discover_tests(${CMAKE_PROJECT_NAME}_teseo)
