do not rrun callbackmanager cmake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,30 +19,31 @@ FetchContent_MakeAvailable(googletest)
 
 FetchContent_Declare(callbackmanager
   GIT_REPOSITORY "https://github.com/jancumps/callbackmanager.git"
-  GIT_TAG "origin/main"   # it's much better to use a specific Git revision or Git tag for reproducibility
+  GIT_TAG "origin/main"
+  SOURCE_SUBDIR =
 )
 FetchContent_MakeAvailable(callbackmanager)
 
 enable_testing()
 
-add_executable(${CMAKE_PROJECT_NAME}_teseo)
-target_sources(${CMAKE_PROJECT_NAME}_teseo
+add_executable(${CMAKE_PROJECT_NAME})
+target_sources(${CMAKE_PROJECT_NAME}
         PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/teseo/teseo.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/test/test_gps_teseo_lib.cpp
         ${callbackmanager_SOURCE_DIR}/test/callbackmanager_test.cpp
 )
-target_sources(${CMAKE_PROJECT_NAME}_teseo
+target_sources(${CMAKE_PROJECT_NAME}
         PUBLIC
         FILE_SET cxx_modules TYPE CXX_MODULES FILES
         ${CMAKE_CURRENT_SOURCE_DIR}/teseo/teseo_iface.cpp
         ${callbackmanager_SOURCE_DIR}/callbackmanager.cpp
 )
 
-target_link_libraries( ${CMAKE_PROJECT_NAME}_teseo
+target_link_libraries( ${CMAKE_PROJECT_NAME}
         GTest::gtest_main
         GTest::gmock_main
 )
 
 include(GoogleTest)
-gtest_discover_tests(${CMAKE_PROJECT_NAME}_teseo)
+gtest_discover_tests(${CMAKE_PROJECT_NAME})
