remove std::pair header and prepare for c++ contracts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,13 @@ project(test_gps_teseo C CXX ASM)
 set(CMAKE_CXX_STANDARD 26)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fmodules-ts -fcommon")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fcontracts")
+IF(CMAKE_BUILD_TYPE MATCHES Debug)
+  message("enable contracts")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fcontract-build-level=default")
+ELSE()
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fcontract-build-level=off")
+ENDIF(CMAKE_BUILD_TYPE MATCHES Debug)
 set(CMAKE_EXE_LINKER_FLAGS "-Wl,-allow-multiple-definition")
 
 include(FetchContent)
